--- a/app/src/main/res/layout/emotion_cheak.xml
+++ b/app/src/main/res/layout/emotion_cheak.xml
@@ -147,7 +147,7 @@
                 </LinearLayout>
 
             <Button
-                android:id="@+id/login"
+                android:id="@+id/emotion_cheak_btn_send"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
